--- a/Downloads.html
+++ b/Downloads.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>Downloads</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -126,6 +126,7 @@ body {
 <div class="row">
   <div class="side">
     <h2>Downloads</h2>
+  <a href="https://github.com/DoesArt-Studios/RamBrowse/archive/master.zip">
   <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot/archive/master.zip">Bot files with Website files in docs folder</a>
     <h3>Git Repository</h3>
   <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">Github Repository</a>
