--- a/Downloads.html
+++ b/Downloads.html
@@ -117,10 +117,11 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">Github Repository</a>
+  <a href="https://github.com/DoesArt-Studios/RamBrowseWebsite">Github Repository</a>
   <a href="Downloads.html">Downloads</a>
   <a href="Jobs.html">Looking for Job</a>
-  <a href="index.html" class="right">Home Page</a>
+  <a href=""></a>
+  <a href="https://doesart-studios.github.io/RamBrowseWebsite" class="right">Home Page</a>
 </div>
 
 <div class="row">
