--- a/Jobs.html
+++ b/Jobs.html
@@ -117,11 +117,13 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">Github Repository</a>
+  <a href="https://github.com/DoesArt-Studios/RamBrowseWebsite">Github Repository</a>
   <a href="Downloads.html">Downloads</a>
   <a href="Jobs.html">Looking for Job</a>
-  <a href="https://doesart-studios.github.io/DoesArt-Studios-Bot/" class="right">Home Page</a>
+  <a href=""></a>
+  <a href="https://doesart-studios.github.io/RamBrowseWebsite" class="right">Home Page</a>
 </div>
+
 
 <div class="row">
   <div class="side">
