--- a/Downloads.html
+++ b/Downloads.html
@@ -127,10 +127,11 @@ body {
 <div class="row">
   <div class="side">
     <h2>Downloads</h2>
-  <a href="https://github.com/DoesArt-Studios/RamBrowse/archive/master.zip">
+  <a href="https://github.com/DoesArt-Studios/RamBrowse/archive/master.zip">RamBrowse Web Browser files</a>
   <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot/archive/master.zip">Bot files with Website files in docs folder</a>
     <h3>Git Repository</h3>
-  <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">Github Repository</a>
+  <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">DoesArt-Studios Discord Bot Repository</a>
+    <a href="https://github.com/DoesArt-Studios/RamBrowse">RamBrowse Repository</a>
 </div>
   
 <div class="footer">
