--- a/Downloads.html
+++ b/Downloads.html
@@ -131,7 +131,8 @@ body {
   <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot/archive/master.zip">Bot files with Website files in docs folder</a>
     <h3>Git Repository</h3>
   <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">DoesArt-Studios Discord Bot Repository</a>
-    <a href="https://github.com/DoesArt-Studios/RamBrowse">RamBrowse Repository</a>
+  <a href="https://github.com/DoesArt-Studios/RamBrowse">RamBrowse Repository</a>
+   <a href="https://github.com/DoesArt-Studios/">DoesArt-Studios Github Link</a>
 </div>
   
 <div class="footer">
