--- a/Downloads.html
+++ b/Downloads.html
@@ -127,12 +127,12 @@ body {
 <div class="row">
   <div class="side">
     <h2>Downloads</h2>
-  <a href="https://github.com/DoesArt-Studios/RamBrowse/archive/master.zip">RamBrowse Web Browser files</a>
-  <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot/archive/master.zip">Bot files with Website files in docs folder</a>
+  <p><a href="https://github.com/DoesArt-Studios/RamBrowse/archive/master.zip">RamBrowse Web Browser files</a></p>
+  <p><a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot/archive/master.zip">Bot files with Website files in docs folder</a></p>
     <h3>Git Repository</h3>
-  <a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">DoesArt-Studios Discord Bot Repository</a>
-  <a href="https://github.com/DoesArt-Studios/RamBrowse">RamBrowse Repository</a>
-   <a href="https://github.com/DoesArt-Studios/">DoesArt-Studios Github Link</a>
+  <p><a href="https://github.com/DoesArt-Studios/DoesArt-Studios-Bot">DoesArt-Studios Discord Bot Repository</a></p>
+    <p><a href="https://github.com/DoesArt-Studios/RamBrowse">RamBrowse Repository</a></p>
+  <p><a href="https://github.com/DoesArt-Studios/">DoesArt-Studios Github Link</a></p>
 </div>
   
 <div class="footer">
