--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <title>DoesArt Studios</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="The DoesArt-Studios Website">
+<meta name="keywords" content="RamBrowse">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Rambrowse">
+<meta property="og:description" content="The Offical DoesArt-Studios Website">
+<meta property="og:url" content="https://rambrowse.tk/">
 <style>
 * {
   box-sizing: border-box;
