--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<title>DoesArt Studios</title>
+<title>DoesArt Studios - RamBrowse</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="The DoesArt-Studios Website">
