--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 <title>DoesArt Studios - RamBrowse</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="The DoesArt-Studios Website">
 <meta name="keywords" content="RamBrowse">
 <meta property="og:type" content="website">
