--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body {
     <h2>Looking for Job</h2>
     <p>We are in need of more staff for the development of this website and future projects.</p>
     <h3>CONTACT</h3>
-    <p>DISCORD:BrodyDoesArt#5782 if you are looking to become a staff member.</p>
+    <p>DISCORD:Brody_PlaysYT#5782 if you are looking to become a staff member.</p>
   </div>
   
 <div class="footer">
